--- a/Machine_Learning/1-Supervisado/3-Modelos/03-Ensemble_Learning_and_Random_Forests/01_Voting.ipynb
+++ b/Machine_Learning/1-Supervisado/3-Modelos/03-Ensemble_Learning_and_Random_Forests/01_Voting.ipynb
@@ -222,7 +222,8 @@
     "    estimators=[\n",
     "        ('lr', LogisticRegression(random_state=42)), \n",
     "        ('rf', RandomForestClassifier(random_state=42)),\n",
-    "        ('svc', SVC(random_state=42))  #cada random state es diferente aunq tengan el mismo nº. Lo que hace ese parametro es que sea replicable, no afecta a la particion de datos. LO QUE HACE ES FIJAR LOS PESOS DE LAS FEATURES EN LAS ECUACIONES EN LINEAR REG. FIJA EL HIPERPLANO EN SVMACHINE O EN CADA NODO DEL RANDOMFOREST\n",
+    "        ('svc', SVC(random_state=42))  #cada random state es diferente aunq tengan el mismo nº. Lo que hace ese parametro es que sea replicable, no afecta a la particion de datos. \n",
+    "        # LO QUE HACE ES FIJAR LOS PESOS DE LAS FEATURES EN LAS ECUACIONES EN LINEAR REG. FIJA EL HIPERPLANO EN SVMACHINE O EN CADA NODO DEL RANDOMFOREST\n",
     "    ]\n",
     ")  #MEJOR QUE SIEMPRE SEA UN NUMEROS DE MODELOS IMPARES, PARA EVITAR QUE NOS COINCIDA EL NUMERO DE PREDICCIONES Y TENGA QUE ELEGIR LA MAQUINA CUAL ES EL MEJOR\n",
     "voting_clf.fit(X_train, y_train)"
@@ -337,7 +338,14 @@
    "source": [
     "Ahí lo tienen. El clasificador por votación supera a todos los clasificadores individuales.\n",
     "\n",
-    "Si todos los clasificadores son capaces de estimar las probabilidades de clase (es decir, si todos tienen un método predict_proba()), entonces puede decirle a Scikit-Learn que prediga la clase con la mayor probabilidad de clase, promediada sobre todos los clasificadores individuales. Esto se denomina soft voting. A menudo logra un mayor rendimiento que la hard voting porque da más peso a los votos de alta confianza. Todo lo que tiene que hacer es establecer el hiperparámetro de voting del clasificador de votación en \"soft\" y asegurarse de que todos los clasificadores pueden estimar las probabilidades de clase. Este no es el caso de la clase SVC por defecto, por lo que necesitas establecer su hiperparámetro de probabilidad a True (esto hará que la clase SVC utilice la validación cruzada para estimar las probabilidades de clase, ralentizando el entrenamiento, y añadirá un método predict_proba()). Vamos a intentarlo:"
+    "Si todos los clasificadores son capaces de estimar las probabilidades de clase (es decir, si todos tienen un método predict_proba()), entonces puede decirle a Scikit-Learn que prediga la clase con la mayor probabilidad de clase, promediada sobre todos los clasificadores individuales. Esto se denomina soft voting. A menudo logra un mayor rendimiento que la hard voting porque da más peso a los votos de alta confianza. Todo lo que tiene que hacer es establecer el hiperparámetro de voting del clasificador de votación en \"soft\" y asegurarse de que todos los clasificadores pueden estimar las probabilidades de clase (o lo que es lo mismo, hacecr predict_proba). Este no es el caso de la clase SVC por defecto, por lo que necesitas establecer su hiperparámetro de probabilidad a True (esto hará que la clase SVC utilice la validación cruzada para estimar las probabilidades de clase, ralentizando el entrenamiento, y añadirá un método predict_proba()). Vamos a intentarlo:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Si el modelo no acepta predict proba no se puede hacer soft. "
    ]
   },
   {
@@ -369,6 +377,13 @@
     "voting_clf.fit(X_train, y_train)\n",
     "voting_clf.score(X_test, y_test)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
