--- a/Machine_Learning/1-Supervisado/3-Modelos/03-Ensemble_Learning_and_Random_Forests/03_Randon_Forest_and_Extra_Trees.ipynb
+++ b/Machine_Learning/1-Supervisado/3-Modelos/03-Ensemble_Learning_and_Random_Forests/03_Randon_Forest_and_Extra_Trees.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,28 +65,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "VotingClassifier(estimators=[('lr', LogisticRegression(random_state=42)),\n",
-       "                             ('rf', RandomForestClassifier(random_state=42)),\n",
-       "                             ('svc', SVC(random_state=42))])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.datasets import make_moons\n",
-    "from sklearn.ensemble import RandomForestClassifier, VotingClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier, VotingClassifier, BaggingClassifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.svm import SVC\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "import numpy as np\n",
     "\n",
     "X, y = make_moons(n_samples=500, noise=0.30, random_state=42)\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)"
@@ -114,6 +103,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "MEJOR MENOS VARIANZA Y MAS SESGO PARA EVITAR OVERFITTING"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "PERMITE SABER QUE FEATURES SON MÁS INFLUYENTES\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Random Forests"
    ]
   },
@@ -121,12 +124,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Como ya hemos comentado, un random forest es un conjunto de árboles de decisión, generalmente entrenados mediante el método bagging (o a veces pasting), normalmente con max_samples fijado al tamaño del conjunto de entrenamiento. En lugar de construir un BaggingClassifier y pasarle un DecisionTreeClassifier, puedes usar la clase RandomForestClassifier, que es más conveniente y está optimizada para árboles de decisión (de forma similar, hay una clase RandomForestRegressor para tareas de regresión). El siguiente código entrena un clasificador de bosque aleatorio con 500 árboles, cada uno limitado a un máximo de 16 nodos hoja, utilizando todos los núcleos de CPU disponibles:\n"
+    "Como ya hemos comentado, un random forest es un conjunto de árboles de decisión, generalmente entrenados mediante el método bagging (o a veces pasting), normalmente con max_samples fijado al tamaño del conjunto de entrenamiento. En lugar de construir un BaggingClassifier y pasarle un DecisionTreeClassifier, puedes usar la clase RandomForestClassifier, que es más conveniente y está optimizada para árboles de decisión (de forma similar, hay una clase RandomForestRegressor para tareas de regresión). El siguiente código entrena un clasificador de RANDOM FOREST con 500 árboles, cada uno limitado a un máximo de 16 nodos hoja, utilizando todos los núcleos de CPU disponibles:\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +147,7 @@
    "source": [
     "Con algunas excepciones, un RandomForestClassifier tiene todos los hiperparámetros de un DecisionTreeClassifier (para controlar cómo crecen los árboles), además de todos los hiperparámetros de un BaggingClassifier para controlar el conjunto en sí.\n",
     "\n",
-    "El algoritmo de random forest introduce una aleatoriedad adicional en el crecimiento de los árboles; en lugar de buscar la mejor característica al dividir un nodo, busca la mejor característica entre un subconjunto aleatorio de características. Por defecto, muestrea n características (donde n es el número total de características). El algoritmo da como resultado una mayor diversidad del árbol, que (de nuevo) cambia un mayor sesgo por una menor varianza, lo que generalmente produce un modelo globalmente mejor. Así pues, el siguiente ClasificadorBolsa es equivalente al anterior RandomForestClassifier:"
+    "El algoritmo de random forest introduce una aleatoriedad adicional en el crecimiento de los árboles; en lugar de buscar la mejor característica(features) al dividir un nodo, busca la mejor característica(features) entre un subconjunto aleatorio de features. Por defecto, muestrea n característica(features)s (donde n es el número total de característica(features)s). El algoritmo da como resultado una mayor diversidad del árbol, que (de nuevo) cambia un mayor sesgo por una menor varianza, lo que generalmente produce un modelo globalmente mejor. Así pues, el siguiente BaggingClas es equivalente al anterior RandomForestClassifier:"
    ]
   },
   {
@@ -156,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +179,7 @@
        "True"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,6 +203,8 @@
    "source": [
     "Cuando se hace crecer un árbol en un random forest, en cada nodo sólo se considera un subconjunto aleatorio de las características para la división (como se ha comentado antes). Es posible hacer árboles aún más aleatorios utilizando también umbrales aleatorios para cada característica en lugar de buscar los mejores umbrales posibles (como hacen los árboles de decisión normales). Para ello, basta con establecer splitter=\"random\" al crear un DecisionTreeClassifier.\n",
     "\n",
+    "Cuanto más aleatrorios sean los árboles, mejor va a ser. \n",
+    "\n",
     "Un bosque de estos árboles extremadamente aleatorios se denomina conjunto de árboles extremadamente aleatorios (o extra-árboles para abreviar). Una vez más, esta técnica cambia un mayor sesgo por una menor varianza. También hace que los clasificadores extra-árboles sean mucho más rápidos de entrenar que los random forest normales, porque encontrar el mejor umbral posible para cada característica en cada nodo es una de las tareas que más tiempo consume en el crecimiento de un árbol. Puede crear un clasificador extra-trees utilizando la clase ExtraTreesClassifier de Scikit-Learn. Su API es idéntica a la de la clase RandomForestClassifier, excepto que el valor predeterminado de bootstrap es False. Del mismo modo, la clase ExtraTreesRegressor tiene la misma API que la clase RandomForestRegressor, excepto que el valor predeterminado de bootstrap es False.\n"
    ]
   },
@@ -222,6 +227,9 @@
    "metadata": {},
    "source": [
     "Otra gran cualidad de los Random Forest es que facilitan la medición de la importancia relativa de cada característica. Scikit-Learn mide la importancia de una característica observando en qué medida los nodos del árbol que utilizan esa característica reducen la impureza de media, en todos los árboles del bosque. Más concretamente, se trata de una media ponderada, en la que el peso de cada nodo es igual al número de muestras de entrenamiento asociadas a él.\n",
+    "\n",
+    "Impureza se calcula con gini o eu...\n",
+    "\n",
     "\n",
     "Scikit-Learn calcula esta puntuación automáticamente para cada característica después del entrenamiento, y luego escala los resultados para que la suma de todas las importancias sea igual a 1. Puede acceder al resultado utilizando la variable feature_importances_. Por ejemplo, el siguiente código entrena un RandomForestClassifier en el conjunto de datos del iris y muestra la importancia de cada característica. Parece que las características más importantes son la longitud (44%) y la anchura (42%) de los pétalos, mientras que la longitud y la anchura de los sépalos son poco importantes en comparación (11% y 2%, respectivamente):"
    ]
@@ -300,6 +308,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "para cada imagen el feature importance va a ser lo más claro. En este caso, los bordes no importan y se centra todo en el medio"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Los random forest son muy útiles para comprender rápidamente qué características son realmente importantes, en particular si necesita realizar una selección de características."
    ]
   },
@@ -327,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.5"
   },
   "nav_menu": {
    "height": "252px",
