--- a/Machine_Learning/1-Supervisado/3-Modelos/04-KNN/ejercicios/Ejercicio_k-NearestNeighbor.ipynb
+++ b/Machine_Learning/1-Supervisado/3-Modelos/04-KNN/ejercicios/Ejercicio_k-NearestNeighbor.ipynb
@@ -209,7 +209,9 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "df.info()"
+   ]
   },
   {
    "cell_type": "code",
@@ -312,7 +314,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df.describe()"
+   ]
   },
   {
    "cell_type": "code",
@@ -332,7 +336,17 @@
      "output_type": "display_data"
     }
    ],
-   "source": []
+   "source": [
+    "df.hist()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "wordcount : distrib discreta no se puede tratar con log\n",
+    "star rt: desequilibrada"
+   ]
   },
   {
    "cell_type": "code",
@@ -352,7 +366,10 @@
      "output_type": "display_data"
     }
    ],
-   "source": []
+   "source": [
+    "sns.catplot(x = 'Star Rating', data = df, kind = 'count')\n",
+    "# sns.countplot(x = 'Star Rating', data = df, lstat = 'percent)\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -381,7 +398,10 @@
      "output_type": "display_data"
     }
    ],
-   "source": []
+   "source": [
+    "plt.figure(figsize=(20,20))\n",
+    "sns.pairplot(data = df, hue= 'Star Rating'))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -397,7 +417,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "# robust scaler?"
    ]
   },
   {
@@ -405,7 +426,12 @@
    "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X = df[['wordcount', 'sentimentValue']]\n",
+    "y = df['Satr Rating']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)"
+   ]
   },
   {
    "cell_type": "code",
@@ -424,7 +450,8 @@
     }
    ],
    "source": [
-    "# unicos "
+    "# unicos \n",
+    "y.unique()"
    ]
   },
   {
@@ -456,7 +483,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import MinMaxScaler"
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "# usamos este para que esté en el mismo rango que sentimentvalue"
    ]
   },
   {
@@ -464,7 +492,32 @@
    "execution_count": 24,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "scaler = MinMaxScaler()\n",
+    "X_train = scaler.fit_transform(X_train)\n",
+    "X_test = scaler.transform(X_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'X_train' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mX_train\u001b[49m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'X_train' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# pd.DataFrame(X_train).hist()  tras el escalado la distribución no cambia\n"
+   ]
   },
   {
    "attachments": {},
@@ -493,7 +546,9 @@
    ],
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "\n"
+    "\n",
+    "knn = KNeighborsClassifier(n_neighbors=5)  #este 5 es una prueba\n",
+    "knn.fit(X_train,y_train)\n"
    ]
   },
   {
@@ -512,7 +567,29 @@
    ],
    "source": [
     "print(\"Accuracy train\", knn.score(X_train, y_train))\n",
-    "print(\"Accuracy test\", knn.score(X_test, y_test))"
+    "print(\"Accuracy test\", knn.score(X_test, y_test))\n",
+    "# el acuracy no es la mas correcta porq hay má de 2 clases."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predict = knn.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "print(classification_report(y_test, predict))\n",
+    "\n",
+    "# indica que el modelo es malo porq no perdice bien "
    ]
   },
   {
@@ -639,7 +716,8 @@
     "for k in k_range:\n",
     "    knn = KNeighborsClassifier(k)\n",
     "    knn.fit(X_train,y_train)\n",
-    "    scores.append(knn.score(X_test,y_test))"
+    "    scores.append(knn.score(X_test,y_test))\n",
+    "    # no hay over fitting porq lo hago sobre el test"
    ]
   },
   {
@@ -842,7 +920,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
