--- a/Machine_Learning/1-Supervisado/4-Ejercicio/Titanic.ipynb
+++ b/Machine_Learning/1-Supervisado/4-Ejercicio/Titanic.ipynb
@@ -1206,7 +1206,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.drop(columns=['Cabin'], axis=1, inplace=True)"
+    "# df.drop(columns=['Cabin'], axis=1, inplace=True) \n",
+    "# df.drop(columns=['Name'], axis=1, inplace=True) lo dejamos \n",
+    "# df.drop(columns=['Ticket'], axis=1, inplace=True) no aporta nda"
    ]
   },
   {
@@ -1215,16 +1217,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.drop(columns=['Name'], axis=1, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.drop(columns=['Ticket'], axis=1, inplace=True)"
+    "df.drop(columns=['Cabin', 'Ticket'], axis=1, inplace=True)"
    ]
   },
   {
@@ -1664,7 +1657,9 @@
    "source": [
     "# se puede sacar la feature importance para saber que columnas dejar, haciendo un randomforecrt antes de nada. \n",
     "\n",
-    "# EJ: embarca en c y la división de muerto o no no sigue la misma distribución que el resto del barco. por eso hay algo que hay que estudiar mas a fondo. y no debemos desechar esa col. "
+    "# EJ: embarca en c y la división de muerto o no no sigue la misma distribución que el resto del barco. por eso hay algo que hay que estudiar mas a fondo. y no debemos desechar esa col. \n",
+    "\n",
+    "# que sea discrta no significa que no pueda aplicar log. pero en este caso no lo haria porq la mayor cantidad son 0 (no se puede) y solo hay 8 unique"
    ]
   },
   {
