--- a/Machine_Learning/4-Series_Temporales/03_Estacionalidad.ipynb
+++ b/Machine_Learning/4-Series_Temporales/03_Estacionalidad.ipynb
@@ -116,7 +116,7 @@
     "\n",
     "### Indicadores estacionales\n",
     "\n",
-    "**Los indicadores estacionales** son características binarias que representan diferencias estacionales en el nivel de una serie temporal. Los indicadores estacionales son lo que se obtiene si se trata un periodo estacional como una característica categórica y se aplica una codificación de un solo golpe.\n",
+    "**Los indicadores estacionales** son características binarias que representan diferencias estacionales en el nivel de una serie temporal. Los indicadores estacionales son lo que se obtiene si se trata un periodo estacional como una característica categórica y se aplica una codificación de onehotencoder.\n",
     "\n",
     "Al codificar los días de la semana de una sola vez, obtenemos indicadores estacionales semanales. La creación de indicadores semanales para la serie *Trigonometría* nos dará seis nuevas características \"ficticias\". (La regresión lineal funciona mejor si se suprime uno de los indicadores; en el cuadro siguiente elegimos el lunes).\n",
     "\n",
@@ -130,7 +130,9 @@
     "| 2016-01-09 | 0.0     | 0.0       | 0.0      | 0.0    | 1.0      | 0.0    |\n",
     "| 2016-01-10 | 0.0     | 0.0       | 0.0      | 0.0    | 0.0      | 1.0    |\n",
     "| 2016-01-11 | 0.0     | 0.0       | 0.0      | 0.0    | 0.0      | 0.0    |\n",
-    "| ...        | ...     | ...       | ...      | ...    | ...      | ...    |"
+    "| ...        | ...     | ...       | ...      | ...    | ...      | ...    |\n",
+    "\n",
+    "(puedo eliminar el lunes, ya que si todos son 0 será que es lunes)"
    ]
   },
   {
@@ -683,7 +685,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.11.5"
   },
   "papermill": {
    "default_parameters": {},
