--- a/Machine_Learning/1-Supervisado/3-Modelos/05_Optimizacion.ipynb
+++ b/Machine_Learning/1-Supervisado/3-Modelos/05_Optimizacion.ipynb
@@ -119,8 +119,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-=======
    "execution_count": 18,
    "id": "a55bef99",
    "metadata": {},
@@ -177,7 +175,6 @@
   },
   {
    "cell_type": "code",
->>>>>>> upstream/main
    "execution_count": 2,
    "id": "cf767cae",
    "metadata": {},
@@ -190,7 +187,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 10,
    "id": "b5dc6e18",
    "metadata": {},
@@ -253,9 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-=======
    "execution_count": 7,
->>>>>>> upstream/main
    "id": "fb9207a0",
    "metadata": {},
    "outputs": [
@@ -307,11 +301,8 @@
        "                   random_state=1, scoring='neg_root_mean_squared_error')"
       ]
      },
-<<<<<<< HEAD
      "execution_count": 3,
-=======
      "execution_count": 7,
->>>>>>> upstream/main
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,11 +330,8 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 4,
-=======
    "execution_count": 8,
->>>>>>> upstream/main
    "id": "88ef9447",
    "metadata": {},
    "outputs": [
@@ -353,11 +341,8 @@
        "{'l1_ratio': 0.01, 'alpha': 0.0001}"
       ]
      },
-<<<<<<< HEAD
      "execution_count": 4,
-=======
      "execution_count": 8,
->>>>>>> upstream/main
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,11 +355,8 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 11,
-=======
    "execution_count": 10,
->>>>>>> upstream/main
    "id": "2cd66e49",
    "metadata": {},
    "outputs": [
@@ -384,32 +366,23 @@
        "-55.85528871698136"
       ]
      },
-<<<<<<< HEAD
      "execution_count": 11,
-=======
      "execution_count": 10,
->>>>>>> upstream/main
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-<<<<<<< HEAD
     "# Mejor score (R2) da negativo porq no es correcto. NO TIENE SENTIDO\n",
-    "# random_search.best_score_"
-=======
+    "# random_search.best_score_",
     "# Mejor score (R2)\n",
     "random_search.best_score_"
->>>>>>> upstream/main
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 12,
-=======
    "execution_count": 11,
->>>>>>> upstream/main
    "id": "7fc26d47",
    "metadata": {},
    "outputs": [
@@ -422,11 +395,8 @@
        "ElasticNet(alpha=0.0001, l1_ratio=0.01)"
       ]
      },
-<<<<<<< HEAD
      "execution_count": 12,
-=======
      "execution_count": 11,
->>>>>>> upstream/main
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +407,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 16,
    "id": "772c5d00",
    "metadata": {},
@@ -489,8 +458,7 @@
     }
    ],
    "source": [
-    "print(load_diabetes().DESCR)"
-=======
+   "print(load_diabetes().DESCR)",
    "execution_count": 14,
    "id": "61bd377f",
    "metadata": {},
@@ -509,16 +477,12 @@
    ],
    "source": [
     "X[0]"
->>>>>>> upstream/main
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 6,
-=======
    "execution_count": 12,
->>>>>>> upstream/main
    "id": "488aa85c",
    "metadata": {},
    "outputs": [
@@ -530,11 +494,8 @@
        "        448.88133911,   64.35253694])"
       ]
      },
-<<<<<<< HEAD
      "execution_count": 6,
-=======
      "execution_count": 12,
->>>>>>> upstream/main
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,11 +507,8 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 7,
-=======
    "execution_count": 19,
->>>>>>> upstream/main
    "id": "ab9716a8",
    "metadata": {},
    "outputs": [
@@ -560,11 +518,8 @@
        "0.45811580159405374"
       ]
      },
-<<<<<<< HEAD
      "execution_count": 7,
-=======
      "execution_count": 19,
->>>>>>> upstream/main
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,28 +677,23 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": null,
    "id": "ced92eb2",
    "metadata": {},
    "outputs": [],
    "source": [
     "# podriamos ver la distribución de los ressiduos (como en boosting) residuos y reales y graficamos."
-=======
    "execution_count": 20,
    "id": "73022b87",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.metrics import mean_squared_error"
->>>>>>> upstream/main
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 8,
-=======
    "execution_count": 24,
    "id": "7f76e0d8",
    "metadata": {},
@@ -894,7 +844,6 @@
   {
    "cell_type": "code",
    "execution_count": 29,
->>>>>>> upstream/main
    "id": "3348d65f",
    "metadata": {},
    "outputs": [
@@ -925,11 +874,8 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 9,
-=======
    "execution_count": 30,
->>>>>>> upstream/main
    "id": "c3bd7494",
    "metadata": {},
    "outputs": [
@@ -941,11 +887,8 @@
        "        448.88133911,   64.35253694])"
       ]
      },
-<<<<<<< HEAD
      "execution_count": 9,
-=======
      "execution_count": 30,
->>>>>>> upstream/main
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -965,11 +908,8 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 25,
-=======
    "execution_count": 31,
->>>>>>> upstream/main
    "id": "af59f5cf",
    "metadata": {},
    "outputs": [
@@ -1021,11 +961,8 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 30,
-=======
    "execution_count": 34,
->>>>>>> upstream/main
    "id": "9826588f",
    "metadata": {},
    "outputs": [
@@ -1074,11 +1011,8 @@
        "             scoring='neg_root_mean_squared_error')"
       ]
      },
-<<<<<<< HEAD
      "execution_count": 30,
-=======
      "execution_count": 34,
->>>>>>> upstream/main
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1111,11 +1045,8 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 31,
-=======
    "execution_count": 35,
->>>>>>> upstream/main
    "id": "97eb8ea1",
    "metadata": {},
    "outputs": [
@@ -1125,11 +1056,8 @@
        "{'alpha': 0.01, 'l1_ratio': 0.98}"
       ]
      },
-<<<<<<< HEAD
      "execution_count": 31,
-=======
      "execution_count": 35,
->>>>>>> upstream/main
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1140,11 +1068,8 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 32,
-=======
    "execution_count": 36,
->>>>>>> upstream/main
    "id": "53075d63",
    "metadata": {},
    "outputs": [
@@ -1154,11 +1079,8 @@
        "-55.82952355139446"
       ]
      },
-<<<<<<< HEAD
      "execution_count": 32,
-=======
      "execution_count": 36,
->>>>>>> upstream/main
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1169,11 +1091,8 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 33,
-=======
    "execution_count": 37,
->>>>>>> upstream/main
    "id": "5d863ba2",
    "metadata": {},
    "outputs": [
@@ -1183,11 +1102,8 @@
        "0.4619276068145661"
       ]
      },
-<<<<<<< HEAD
      "execution_count": 33,
-=======
      "execution_count": 37,
->>>>>>> upstream/main
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1199,11 +1115,8 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 35,
-=======
    "execution_count": 38,
->>>>>>> upstream/main
    "id": "8df9793a",
    "metadata": {},
    "outputs": [
@@ -1269,7 +1182,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 38,
    "id": "41387109",
    "metadata": {},
@@ -1332,9 +1244,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-=======
    "execution_count": 42,
->>>>>>> upstream/main
    "id": "ab00ecc5",
    "metadata": {},
    "outputs": [],
@@ -1345,7 +1255,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 48,
    "id": "4841a2af",
    "metadata": {},
@@ -1370,9 +1279,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-=======
    "execution_count": 44,
->>>>>>> upstream/main
    "id": "2a42eddf",
    "metadata": {},
    "outputs": [
@@ -1380,11 +1287,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD
       "100%|██████████| 100/100 [00:00<00:00, 122.28trial/s, best loss: 55.81447913406364]\n"
-=======
       "100%|██████████| 100/100 [00:01<00:00, 99.05trial/s, best loss: -77.72695853259881]\n"
->>>>>>> upstream/main
      ]
     }
    ],
@@ -1411,28 +1315,22 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 52,
-=======
    "execution_count": 45,
->>>>>>> upstream/main
    "id": "b8d518bd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-<<<<<<< HEAD
        "{'alpha': 0.0006878723799022528, 'l1_ratio': 0.6943227364584204}"
       ]
      },
      "execution_count": 52,
-=======
        "{'alpha': 0.9817475217413287, 'l1_ratio': 0.018078948378661072}"
       ]
      },
      "execution_count": 45,
->>>>>>> upstream/main
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1443,28 +1341,22 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 54,
-=======
    "execution_count": 47,
->>>>>>> upstream/main
    "id": "981ec33b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-<<<<<<< HEAD
        "-0.001856349743322161"
       ]
      },
      "execution_count": 54,
-=======
        "0.4639095494330632"
       ]
      },
      "execution_count": 47,
->>>>>>> upstream/main
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1508,11 +1400,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-<<<<<<< HEAD
-   "version": "3.11.5"
-=======
-   "version": "3.11.6"
->>>>>>> upstream/main
+   "version": "3.11.5",
+   "version": "3.11.6",
   }
  },
  "nbformat": 4,
