--- a/Data_Engineer/Flask/Teoria/Lecciones/NB02.ipynb
+++ b/Data_Engineer/Flask/Teoria/Lecciones/NB02.ipynb
@@ -138,7 +138,9 @@
    "source": [
     "from flask import Flask\n",
     "\n",
-    "app = Flask(__name__)"
+    "app = Flask(__name__)\n",
+    "\n",
+    "# __name__ es el nombre del archivo actual en el que estamos ejecutando. lo coge automaticamente\n"
    ]
   },
   {
