--- a/Data_Engineer/Flask/Teoria/Lecciones/NB03.ipynb
+++ b/Data_Engineer/Flask/Teoria/Lecciones/NB03.ipynb
@@ -107,6 +107,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO LO QUE LLEVE @ ES UN DECORADOR. SE PUEDE USAR TB PARA TUS CLASES O FUNCIONES."
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
