--- a/Data_Engineer/Flask/Teoria/Lecciones/NB01.ipynb
+++ b/Data_Engineer/Flask/Teoria/Lecciones/NB01.ipynb
@@ -213,6 +213,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
