--- a/Data_Engineer/Flask/Teoria/Lecciones/NB05.ipynb
+++ b/Data_Engineer/Flask/Teoria/Lecciones/NB05.ipynb
@@ -94,6 +94,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# @app.route(\"/user/<name>/<int:index>\")\n",
+    "# def index(name, index):\n",
+    "#     mylist = ['elemento1', 'elemento2', 'elemento3', 'elemento4']\n",
+    "#     mydict = {'key': 'valor'}\n",
+    "#     mytuple = ('tuple1', 'tuple2', 'tuple3', 'tuple4')\n",
+    "#     return render_template(\"test.html\", name=name, myindex=index, mylist=mylist, mydict=mydict, mytuple=mytuple)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
